--- a/.github/workflows/azure-functionapp.yml
+++ b/.github/workflows/azure-functionapp.yml
@@ -5,7 +5,7 @@ on:
       - master
 
 env:
-  ResourceGroup: metasecworld
+  ResourceGroup: MetaSec-World
 jobs:
   build:
     runs-on: ubuntu-latest
